[metadata]
name = slrkit_utils
author = 'Guido Benetti'
author_email = 'guido.benetti01@universitadipavia.it'
python_requires = '>= 3.6'
summary = Utility code for slr-kit projects
url = https://github.com/robolab-pavia/slr-kit-utils
license = GPL-3
classifiers =
	Programming Language :: Python :: 3
	Operating System :: OS Independent
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = slrkit_utils

include_package_data = True
